--- a/officers.html
+++ b/officers.html
@@ -5,14 +5,16 @@
     <title>Cupertino FBLA</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Cupertino FBLA is the largest professional interest club at Cupertino High School.">
     <meta name="keywords" content="Cupertino FBLA, Tino FBLA, Cupertino High School">
     <meta name="author" content="Varun Shenoy">
     <link rel="shortcut icon" href="images/favicon.png" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
   </head>
   <body>
-    <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom box-shadow" style="z-index: 100">
+    <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom box-shadow">
       <div class="header-icon"><img src="images/tinofbla.png" title="" style="width: 100%"></div>
       <h5 class="my-0 mr-md-auto font-weight-normal" style="padding: 10px;">cupertino <b>fbla</b></h5>
       <nav class="my-2 my-md-0 mr-md-3">
@@ -23,59 +25,9 @@
       </nav>
       <a class="btn btn-outline-primary" href="#">join</a>
     </div>
-    <!--Carousel Wrapper-->
-    <div id="carousel-example-2" class="carousel slide carousel-fade" data-ride="carousel" style="margin-top: -16px">
-        <!--Indicators-->
-        <ol class="carousel-indicators">
-            <li data-target="#carousel-example-2" data-slide-to="0" class="active"></li>
-            <li data-target="#carousel-example-2" data-slide-to="1"></li>
-            <li data-target="#carousel-example-2" data-slide-to="2"></li>
-        </ol>
-        <!--/.Indicators-->
-        <!--Slides-->
-        <div class="carousel-inner" role="listbox">
-            <div class="carousel-item active">
-                <div class="view">
-                    <img class="d-block w-100" src="images/carousel/banquet.jpg" alt="First slide">
-                    <div class="mask rgba-black-light"></div>
-                </div>
-            </div>
-            <div class="carousel-item">
-                <!--Mask color-->
-                <div class="view">
-                    <img class="d-block w-100" src="images/carousel/slc.jpg" alt="Second slide">
-                    <div class="mask rgba-black-strong"></div>
-                </div>
-            </div>
-            <div class="carousel-item">
-                <!--Mask color-->
-                <div class="view">
-                    <img class="d-block w-100" src="images/carousel/rando.jpg" alt="Third slide">
-                    <div class="mask rgba-black-slight"></div>
-                </div>
-
-            </div>
-        </div>
-        <!--/.Slides-->
-        <!--Controls-->
-        <a class="carousel-control-prev" href="#carousel-example-2" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#carousel-example-2" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-        </a>
-        <!--/.Controls-->
-    </div>
-    <!--/.Carousel Wrapper-->
-    <div class="px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
-      <h5><b>The largest professional interest club at Cupertino High School</b></h5>
-      <p class="lead" style="padding-left: 40px; padding-right: 40px; font-size: 18px;">Cupertino FBLA is the largest business student organization at Cupertino High School. We welcome students of all different backgrounds, interests, and skill levels to join our community and share in our passion for all aspects of business, including accounting, technology, and presentation. Our meetings take place on Thursdays at lunch.</p>
-    </div>
-    <div class="album py-5 bg-light box-shadow">
-        <div class="text-center"><h3><b>Our Projects</b></h3>
-        <p class="lead" style="padding-left: 40px; padding-right: 40px; font-size: 15px;">Cupertino FBLA offers four committees for members to join — each serving a different topic and mission - as well as a wide array of competitions and individual projects.</p>
+    <div class="album py-5 bg-light box-shadow" style="margin-top: -16px;">
+        <div class="text-center"><h3><b>Our Officers</b></h3>
+        <p class="lead" style="padding-left: 40px; padding-right: 40px; font-size: 15px;">Cupertino FBLA is a student-led club. We're all super excited to serve as your Cupertino High School FBLA Officer Team for the 2018-2019 school year! If you have any questions, please feel free to reach out to any one of us via email or social media! We are looking forward to another fantastic year!</p>
       </div>
         <div class="container">
           <div class="row">
@@ -83,12 +35,14 @@
               <div class="card mb-4 box-shadow">
                 <img class="card-img-top" data-src="holder.js/100px225?theme=thumb&amp;bg=55595c&amp;fg=eceeef&amp;text=Thumbnail" alt="Thumbnail [100%x225]" style="height: 225px; width: 100%; display: block;" src="data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%22288%22%20height%3D%22225%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%20288%20225%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_1641a905eb7%20text%20%7B%20fill%3A%23eceeef%3Bfont-weight%3Abold%3Bfont-family%3AArial%2C%20Helvetica%2C%20Open%20Sans%2C%20sans-serif%2C%20monospace%3Bfont-size%3A14pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_1641a905eb7%22%3E%3Crect%20width%3D%22288%22%20height%3D%22225%22%20fill%3D%22%2355595c%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%2296.828125%22%20y%3D%22118.8%22%3EThumbnail%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E" data-holder-rendered="true">
                 <div class="card-body">
-                  <h5><b>Competitions</b></h5>
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  <h5><b>Somebody</b></h5>
+                  <h6>OFFICER POSITION</h6>
+                  <p class="card-text">[blurb text] This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                   <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
-                      <button type="button" class="btn btn-sm btn-outline-secondary">Join</button>
-                      <button type="button" class="btn btn-sm btn-outline-secondary">Learn about Competitions</button>
+                      <button type="button" class="btn btn-sm btn-outline-secondary"><i class="fab fa-facebook"></i></button>
+                      <button type="button" class="btn btn-sm btn-outline-secondary"><i class="fab fa-instagram"></i></button>
+                      <button type="button" class="btn btn-sm btn-outline-secondary"><i class="fas fa-envelope"></i></button>
                     </div>
                   </div>
                 </div>
@@ -173,17 +127,6 @@
           </div>
         </div>
       </div>
-      <div class="py-5">
-        <div class="text-center"><h3><b>Calendar</b></h3>
-        <p class="lead" style="padding-left: 40px; padding-right: 40px; font-size: 15px;">We attend the Bay Section Leadership Conference (BSLC), California State Leadership Conference, and National Leadership Conference (NLC) every year, as well as the Leadership Development Institute (LDI) and various tours of businesses, such as Google and Facebook, around the year. Moreover, we host study sessions to prepare members for upcoming competitive events. All of this information and more is showcased in our calendar.</p>
-        <center><div style="width: 80%" class="box-shadow">
-          <iframe src="https://calendar.google.com/calendar/embed?src=gnhgvn7bq4il4s68jst3kmmvdc%40group.calendar.google.com&ctz=America%2FLos_Angeles" style="border: 0" width="100%" height="600" frameborder="0" scrolling="no"></iframe>
-        </div></center>
-      </div>
-      <br>
-      <div class="py-5 bg-light box-shadow">
-        <center><h2>Interested in our programs and want to be involved? <a href="#">Join</a> us.
-      </div>
       <footer class="text-muted">
       <div class="container">
         <p class="float-right">
@@ -193,10 +136,5 @@
         <p>Website built and maintained by <a href="varunshenoy.com">Varun Shenoy</a></p>
       </div>
     </footer>
-    <script
-  src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-  integrity="sha256-3edrmyuQ0w65f8gfBsqowzjJe2iM6n0nKciPUp8y+7E="
-  crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
   </body>
 </html>
