--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
         <div class="text-center"><h3><b>Calendar</b></h3>
         <p class="lead" style="padding-left: 40px; padding-right: 40px; font-size: 15px;">We attend the Bay Section Leadership Conference (BSLC), California State Leadership Conference, and National Leadership Conference (NLC) every year, as well as the Leadership Development Institute (LDI) and various tours of businesses, such as Google and Facebook, around the year. Moreover, we host study sessions to prepare members for upcoming competitive events. All of this information and more is showcased in our calendar.</p>
         <center><div style="width: 80%" class="box-shadow" style="overflow: hidden; overflow: auto;overflow-y: hidden;">
-          <iframe src="https://calendar.google.com/calendar/embed?src=gnhgvn7bq4il4s68jst3kmmvdc%40group.calendar.google.com&ctz=America%2FLos_Angeles" style="border: 0" width="100%" height="600" frameborder="0" scrolling="no"></iframe>
+          <iframe src="https://calendar.google.com/calendar/embed?src=gnhgvn7bq4il4s68jst3kmmvdc%40group.calendar.google.com&ctz=America%2FLos_Angeles" style="border: 0" width="100%" height="600" frameborder="0" scrolling="yes"></iframe>
         </div></center>
       </div>
       <br>
