--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
           <a href="#">Back to top</a>
         </p>
         <p>Copyrighted by Cupertino FBLA, 2018. All rights reserved.</p>
-        <p>Website built and maintained by <a href="varunshenoy.com">Varun Shenoy</a></p>
+        <p>Website built and maintained by <a href="http://varunshenoy.com">Varun Shenoy</a></p>
       </div>
     </footer>
     <script
