--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="author" content="Varun Shenoy">
     <link rel="shortcut icon" href="images/favicon.png" />
   </head>
-  <body style="overflow-y: hidden">
+  <body>
     <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom box-shadow" style="z-index: 100">
       <div class="header-icon"><img src="images/tinofbla.png" title="" style="width: 100%"></div>
       <h5 class="my-0 mr-md-auto font-weight-normal" style="padding: 10px;">cupertino <b>fbla</b></h5>
