--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
     <div class="px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
       <h5><b>The largest professional interest club at Cupertino High School</b></h5>
       <p class="lead" style="padding-left: 40px; padding-right: 40px; font-size: 18px;">Cupertino FBLA is the largest business student organization at Cupertino High School. We welcome students of all different backgrounds, interests, and skill levels to join our community and share in our passion for all aspects of business, including accounting, technology, and presentation. Our meetings take place on Thursdays at lunch.</p>
+      <p class="lead" style="padding-left: 40px; padding-right: 40px; font-size: 18px;">Like our <a href="https://www.facebook.com/tinobusinessleaders/?ref=bookmarks">Facebook Page</a> and if you are a member, join our <a href="https://www.facebook.com/groups/cupertinofuturebusinessleadersofamerica/">Facebook Group</a>!</p>
     </div>
     <div class="album py-5 bg-light box-shadow">
         <div class="text-center"><h3><b>Our Projects</b></h3>
