--- a/officers.html
+++ b/officers.html
@@ -25,6 +25,7 @@
       </nav>
       <a class="btn btn-outline-primary" href="#">join</a>
     </div>
+    <div class="officers"><img style="width: 100%; margin-top: -16px;" src="images/officers.jpg"></div>
     <div class="album py-5 bg-light box-shadow" style="margin-top: -16px;">
         <div class="text-center"><h3><b>Our Officers</b></h3>
         <p class="lead" style="padding-left: 40px; padding-right: 40px; font-size: 15px;">Cupertino FBLA is a student-led club. We're all super excited to serve as your Cupertino High School FBLA Officer Team for the 2018-2019 school year! If you have any questions, please feel free to reach out to any one of us via email or social media! We are looking forward to another fantastic year!</p>
