--- a/officers.html
+++ b/officers.html
@@ -19,7 +19,7 @@
       <h5 class="my-0 mr-md-auto font-weight-normal" style="padding: 10px;">cupertino <b>fbla</b></h5>
       <nav class="my-2 my-md-0 mr-md-3">
         <a class="p-2 text-dark" href="index.html">home</a>
-        <a class="p-2 text-dark" href="#">about</a>
+        <a class="p-2 text-dark" href="about.html">about</a>
         <a class="p-2 text-dark" href="#">news</a>
         <a class="p-2 text-dark" href="officers.html">officers</a>
       </nav>
